syntax = "proto2";

package models;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "desired_lrp.proto";
import "error.proto";

message DesiredLRPLifecycleResponse {
  optional Error error = 1;
}

message DesiredLRPsResponse {
  optional Error error = 1;
  repeated DesiredLRP desired_lrps = 2;
}

message DesiredLRPsRequest {
  optional string domain = 1;
}

message DesiredLRPResponse {
  optional Error error = 1;
  optional DesiredLRP desired_lrp = 2;
}

message DesiredLRPByProcessGuidRequest {
  optional string process_guid = 1;
}

message DesireLRPRequest {
  optional DesiredLRP desired_lrp = 1;
}

message UpdateDesiredLRPRequest {
  optional string process_guid = 1;
  optional DesiredLRPUpdate update = 2;
}

message RemoveDesiredLRPRequest {
  optional string process_guid = 1;
}
